# msai-setup

./: .gitignore  CLAUDE.md  Makefile  README.md  START.md  ZFS.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md
docs/ai/: index.md
docs/ai/agent-frameworks/: crewai.md  index.md  langchain.md  langgraph.md  tools.md
docs/ansible/: concepts.md  connection.md  handlers.md  index.md  installation.md  integration.md  inventory.md  modules.md  playbooks.md  roles.md  templates.md  testing.md  troubleshooting.md  variables.md  vault.md
docs/apple-container/: index.md  installation.md  limitations.md  running-containers.md
docs/bash/: index.md
docs/bcachefs/: concepts.md  features.md  index.md  installation.md  limitations.md  usage.md
docs/docker/: compose.md  development-stacks.md  docker-vs-lxc.md  index.md  monitoring.md  nextcloud.md  ollama-stack.md  os-containers.md  plex.md  resources.md  setup.md
docs/getting-started/: architecture.md  bios-setup.md  cli.md  hardware-architecture.md  hardware.md  index.md  prerequisites.md  software-architecture.md
docs/incus/: concepts.md  containers.md  docker-in-incus.md  fedora-vm.md  gpu-passthrough.md  graphical-access.md  index.md  installation.md  linux-iso-install.md  networking.md  oci-containers.md  profiles.md  snapshots-backup.md  storage.md  troubleshooting.md  vms.md  windows-7-10-vm.md  windows-legacy-vm.md  windows-vm.md
docs/netplan/: index.md
docs/networking/: index.md
docs/operations/: backup.md  capacity-planning.md  index.md  monitoring.md  power-management.md  rebuild-checklist.md  recovery.md  secrets-management.md
docs/remote-desktop/: index.md
docs/services/: index.md
docs/ssh/: index.md
docs/tailscale/: index.md
docs/testing/: bash.md  index.md  javascript.md  python.md
docs/ubuntu/: firewall.md  index.md  networking.md  remote-desktop.md
docs/virtualbox/: apple-silicon.md  automation.md  concepts.md  headless.md  index.md  installation.md  networking.md  snapshots.md  storage.md  troubleshooting.md  unattended.md  vboxmanage.md  vms.md
docs/virtualization/: gpu-passthrough.md  index.md  kvm-setup.md  vm-resources.md  windows-vm.md
docs/zfs/: concepts.md  datasets.md  docker-integration.md  encryption.md  index.md  learning-path.md  operations.md  partitioning.md  pool-creation.md  snapshots.md  troubleshooting.md  tuning.md  virtualbox-lab.md  vm-storage.md
scripts/: zfs-lab-vm.sh
scripts/lab/: 01_provision.py  01_provision_multipass.py  02_apply.py  README.md  _config.py  _iso.py  _multipass.py  _ssh.py  _state.py  _vbox.py  all.py
src/msai_setup/: __init__.py  cli.py
tests/: test_cloudinit.py  test_config.py  test_doctor.py  test_incus.py  test_incus_provision.py  test_install.py  test_instance.py  test_iso.py  test_kickstart.py  test_profile.py  test_profiles.py  test_provision.py  test_state.py  test_vbox.py  test_windows.py
(+429 files in other folders)
