[project]
name = "msai-setup"
version = "0.1.0"
description = "MS-S1 MAX Home Server Documentation and Setup Scripts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.25.1",
    "rich>=15.0.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
msai = "msai_setup.cli:app"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-glightbox>=0.5.2",
    "ruff>=0.15.12",
    "mypy>=1.20.2",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "types-pyyaml>=6.0.12.20260408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/msai_setup"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "W", "F", "I", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.pyright]
include = ["src"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
